# quotalens-codex

./: package-lock.json  package.json
docs/: GITHUB-RELEASE-CHECKLIST.md  RELEASE.md  RELEASE_TEMPLATE.md
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: codex.rs
src/components/: QuotaCard.tsx
