[package]
name = "quotalens-codex"
version = "0.1.7"
description = "A personal floating Codex quota monitor"
authors = ["QuotaLens for Codex contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "quotalens_codex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1", features = ["macros", "sync"] }

